@@ -11,6 +11,7 @@
 
 import os
 from os import path
+import warnings
 
 from six import iteritems
 from docutils import nodes
@@ -43,6 +44,21 @@ class LaTeXBuilder(Builder):
         self.docnames = []
         self.document_data = []
         texescape.init()
+        self.check_options()
+
+    def check_options(self):
+        if self.config.latex_toplevel_sectioning not in (None, 'part', 'chapter', 'section'):
+            self.warn('invalid latex_toplevel_sectioning, ignored: %s' %
+                      self.config.latex_top_sectionlevel)
+            self.config.latex_top_sectionlevel = None
+
+        if self.config.latex_use_parts:
+            warnings.warn('latex_use_parts will be removed at Sphinx-1.5. '
+                          'Use latex_toplevel_sectioning instead.',
+                          DeprecationWarning)
+
+            if self.config.latex_toplevel_sectioning:
+                self.warn('latex_use_parts conflicts with latex_toplevel_sectioning, ignored.')
 
     def get_outdated_docs(self):
         return 'all documents'  # for now
