@@ -206,7 +206,9 @@ class Config(object):
                            None),
         latex_logo = (None, None, string_classes),
         latex_appendices = ([], None),
+        # now deprecated - use latex_toplevel_sectioning
         latex_use_parts = (False, None),
+        latex_toplevel_sectioning = (None, None, [str]),
         latex_use_modindex = (True, None),  # deprecated
         latex_domain_indices = (True, None, [list]),
         latex_show_urls = ('no', None),
